--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^11.3.9",
     "html-to-image": "^1.11.11",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
