--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.3.9",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
